--- a/Projeto 3.ipynb
+++ b/Projeto 3.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -87,11 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m = 8.171e-07 +- 0.0000\n",
+      "b = 64.3 +- 0.0445\n",
+      "\n",
+      "R2 = 0.39188\n",
+      "p of test F : 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# R2 do Overall em relação ao Valor\n",
     "\n",
@@ -117,22 +129,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Overall</th>\n",
+       "      <th>Potencial</th>\n",
+       "      <th>Salário</th>\n",
+       "      <th>Valor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>17981.000000</td>\n",
+       "      <td>17981.000000</td>\n",
+       "      <td>17981.000000</td>\n",
+       "      <td>17981.000000</td>\n",
+       "      <td>1.798100e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>25.144541</td>\n",
+       "      <td>66.247984</td>\n",
+       "      <td>71.190813</td>\n",
+       "      <td>11546.966242</td>\n",
+       "      <td>2.385390e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4.614272</td>\n",
+       "      <td>6.987965</td>\n",
+       "      <td>6.102199</td>\n",
+       "      <td>23080.000139</td>\n",
+       "      <td>5.353970e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>67.000000</td>\n",
+       "      <td>2000.000000</td>\n",
+       "      <td>3.000000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>4000.000000</td>\n",
+       "      <td>6.750000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>12000.000000</td>\n",
+       "      <td>2.100000e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>565000.000000</td>\n",
+       "      <td>1.230000e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Idade       Overall     Potencial        Salário         Valor\n",
+       "count  17981.000000  17981.000000  17981.000000   17981.000000  1.798100e+04\n",
+       "mean      25.144541     66.247984     71.190813   11546.966242  2.385390e+06\n",
+       "std        4.614272      6.987965      6.102199   23080.000139  5.353970e+06\n",
+       "min       16.000000     46.000000     46.000000       0.000000  0.000000e+00\n",
+       "25%       21.000000     62.000000     67.000000    2000.000000  3.000000e+05\n",
+       "50%       25.000000     66.000000     71.000000    4000.000000  6.750000e+05\n",
+       "75%       28.000000     71.000000     75.000000   12000.000000  2.100000e+06\n",
+       "max       47.000000     94.000000     94.000000  565000.000000  1.230000e+08"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_valor_idade.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.39187667210821164"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# R2 do Overall em relação ao Valor\n",
     "Y = df_valor_idade.Valor\n",
@@ -155,11 +279,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0062899951432842105"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# R2 da Idade em relação ao Valor\n",
     "Y = df_valor_idade.Valor\n",
@@ -180,11 +315,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.72336759331866829"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# R2 do Salário em relação ao Valor\n",
     "Y = df_valor_idade.Valor\n",
@@ -205,11 +351,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.75737551312652207"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# R2 do Overall,Potencial e Salário juntos em relação ao Valor\n",
     "Y = df_valor_idade.Valor\n",
@@ -230,11 +387,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid token (<string>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<string>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    2017-01-30 00:00:00\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid token\n"
+     ]
+    }
+   ],
    "source": [
     "#Lista Atributos dos jogadores\n",
     "lista_atributos = list(df_completo)\n",
